welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method getCouleurSol: ()java.awt.Color
		tab(i) = getCouleurSol(i)
                                      ^